Upgrade Spring Boot version to 3.2.5 and set Java version to 21 in pom.xml